--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,4 @@
 ---
-import Header from "../components/Header.astro";
-
 interface Props {
   title: string;
 }
@@ -9,17 +7,16 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es" class="bg-slate-900">
+<html lang="es" class="bg-slate-900 scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/Icono-blanco.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="dark">
-    <Header />
+  <body class="dark relative">
     <slot />
   </body>
 </html>
@@ -29,5 +26,26 @@ const { title } = Astro.props;
     background: #13151a;
     background-size: 224px;
     color-scheme: dark light;
+  }
+
+  /* Estilo para el scrollbar principal */
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  /* Estilo para el track (fondo) del scrollbar */
+  ::-webkit-scrollbar-track {
+    background-color: #1f2937;
+  }
+
+  /* Estilo para el thumb (el deslizador) del scrollbar */
+  ::-webkit-scrollbar-thumb {
+    background-color: #1e40af;
+    border-radius: 4px;
+  }
+
+  /* Estilo cuando el thumb está siendo arrastrado */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #1d4ed8;
   }
 </style>
