--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,127 +1,20 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+import TopButton from "../components/TopButton.astro";
+import Information from "../components/Information.astro";
+import Experience from "../components/Experience.astro";
+import Projects from "../components/Projects.astro";
+import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="Bienvenido a mi portafolio">
-  <div
-    class="container mx-auto mt-10 px-12 h-96 flex justify-center items-center"
-  >
-    <div class="w-[80%] columns-2 flex">
-      <div class="h-64 w-[30%] flex justify-center items-center">
-        <div class="w-80 h-80 rounded-full flex justify-center items-center">
-          <img
-            class="w-80 h-80 object-cover rounded-full"
-            src="/Jose Villa.webp"
-            alt="Mi foto personal"
-          />
-        </div>
-      </div>
-      <div class="w-[70%] h-64 px-5 py-2">
-        <h1 class="text-6xl text-white">José Enrique Villa H.</h1>
-        <h3 class="text-3xl text-blue-600">Full Stack Developer</h3>
-        <div class="w-[14%] h-[7px] mt-2 bg-blue-500"></div>
-        <div class="w-[70%]">
-          <p class="mt-2 text-white">
-            Enfoque creativo, soluciones innovadoras, trabajo en equipo,
-            proactivo con capacidad de adaptación y en constante aprendizaje.
-          </p>
-        </div>
-        <div class="columns-2 w-[70%] mt-5 flex">
-          <div class="w-[30%]">
-            <a
-              href="#"
-              class="bg-blue-600 hover:bg-blue-500 text-white w-[135px] py-2 rounded flex justify-center gap-1 sobre"
-            >
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-                  d="M3 4m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v10a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z"
-                ></path><path d="M9 10m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"
-                ></path><path d="M15 8l2 0"></path><path d="M15 12l2 0"
-                ></path><path d="M7 16l10 0"></path></svg
-              >
-              <span>Sobre mi</span></a
-            >
-          </div>
-          <div class="w-[70%] flex gap-2">
-            <a
-              class="bg-white hover:bg-gray-200 w-[90px] py-2 rounded flex justify-center gap-1"
-              href="https://github.com/josevillah"
-              target="_blank"
-            >
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-                  d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
-                ></path></svg
-              >
-              <span>GitHub</span>
-            </a>
-            <a
-              class="bg-white hover:bg-gray-200 w-[110px] py-2 rounded flex justify-center gap-1"
-              href="https://www.instagram.com/josevillah/"
-              target="_blank"
-            >
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-                  d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"
-                ></path><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"
-                ></path><path d="M16.5 7.5l0 .01"></path></svg
-              >
-              <span>Instagram</span>
-            </a>
-            <a
-              class="bg-white hover:bg-gray-200 w-[110px] py-2 rounded flex justify-center gap-1"
-              href="https://www.facebook.com/jose.villa.3745"
-              target="_blank"
-            >
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-                  d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
-                ></path></svg
-              >
-              <span>Facebook</span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
+<Layout title="Portafolio Jvilla">
+  <Header />
+  <TopButton />
+  <Information />
+  <div class="w-[100%] mt-[200px] bg-blue-950 pb-[120px]">
+    <Experience />
   </div>
+  <Projects />
+  <Footer />
 </Layout>
-
-<style>
-  .sobre:hover {
-    animation: 0.5s ease;
-    background-color: aqua;
-  }
-</style>
