--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -22,7 +22,7 @@
         class="mt-[80px] w-[100%] h-[100%] pb-[120px] flex flex-row gap-4 flex-wrap justify-center"
       >
         <div
-          class="w-[100%] sm:w-[45%] lg:w-[23%] h-[100%] rounded-md bg-gray-800 py-3 px-3 mb-[20px] flex flex-col"
+          class="w-[100%] sm:w-[45%] lg:w-[23%] h-[100%] min-h-[350px] rounded-md bg-gray-800 py-3 px-3 mb-[20px] flex flex-col"
         >
           <a
             href="https://ingvac.cl/"
@@ -65,7 +65,7 @@
         </div>
 
         <div
-          class="w-[100%] sm:w-[45%] lg:w-[23%] h-[100%] rounded-md bg-gray-800 py-3 px-3 mb-[20px] flex flex-col"
+          class="w-[100%] sm:w-[45%] lg:w-[23%] h-[100%] min-h-[350px] rounded-md bg-gray-800 py-3 px-3 mb-[20px] flex flex-col"
         >
           <a class="text-xl font-bold text-blue-500">Convertidor</a>
           <h4 class="text-md text-blue-300">Aplicación de escritorio</h4>
@@ -103,7 +103,7 @@
         </div>
 
         <div
-          class="w-[100%] sm:w-[45%] lg:w-[23%] h-[100%] rounded-md bg-gray-800 py-3 px-3 mb-[20px] flex flex-col"
+          class="w-[100%] sm:w-[45%] lg:w-[23%] h-[100%] min-h-[350px] rounded-md bg-gray-800 py-3 px-3 mb-[20px] flex flex-col"
         >
           <a
             href="https://isaflor.cl/"
@@ -228,7 +228,7 @@
         </div>
 
         <div
-          class="w-[100%] sm:w-[45%] lg:w-[23%] h-[100%] rounded-md bg-gray-800 py-3 px-3 mb-[20px] flex flex-col"
+          class="w-[100%] sm:w-[45%] lg:w-[23%] h-[100%] min-h-[350px] rounded-md bg-gray-800 py-3 px-3 mb-[20px] flex flex-col"
         >
           <a class="text-xl font-bold text-blue-500">VIT</a>
           <h4 class="text-md text-blue-300">Intranet</h4>
