--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,16 +1,116 @@
-<footer class="container mx-auto px-12 bg-slate-950">
-  <section class="w-[100%] flex flex-row">
-    <div
-      class="text-white w-[30%] h-[100%] min-h-[150px] flex justify-center
-    items-center"
-    >
-      <div class="w-[150px] object-cover">
+<footer class="w-[100%] px-10 py-5 md:py-2 bg-blue-950">
+  <section class="w-[100%] flex flex-col md:flex-row">
+    <div class="w-[100%] flex justify-center items-center md:w-[50%]">
+      <div class="max-w-[150px] flex object-cover">
         <img class="w-[100%] h-[100%]" src="/Logo-blanco.png" />
       </div>
     </div>
-    <div class="text-white w-[70%]">
-      <div class=""></div>
-      <div class=""></div>
-    </div>
+    
+    <nav class="w-[100%] md:w-[50%] flex justify-center items-center">
+      <ul
+        class="w-[50%] text-white flex flex-row justify-center gap-4 mt-[20px] md:mt-0"
+      >
+        <!-- Instagram -->
+        <li class="hover:text-blue-500 transicionColor">
+          <a href="https://www.instagram.com/josevillah/">
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="currentColor"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+                d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"
+              ></path><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"
+              ></path><path d="M16.5 7.5l0 .01"></path></svg
+            >
+          </a>
+        </li>
+        <!-- Facebook -->
+        <li class="hover:text-blue-500 transicionColor">
+          <a href="https://www.facebook.com/jose.villa.3745?locale=es_LA">
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="currentColor"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+                d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
+              ></path></svg
+            >
+          </a>
+        </li>
+        <!-- whatsApp -->
+        <li class="hover:text-blue-500 transicionColor">
+          <a href="https://wa.me/+56992953190" target="_blank">
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="currentColor"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+                d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9"></path><path
+                d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1"
+              ></path></svg
+            >
+          </a>
+        </li>
+        <!-- Linkedin -->
+        <li class="hover:text-blue-500 transicionColor">
+          <a href="https://www.linkedin.com/in/josevillah/">
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="currentColor"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+                d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
+              ></path><path d="M8 11l0 5"></path><path d="M8 8l0 .01"
+              ></path><path d="M12 16l0 -5"></path><path
+                d="M16 16v-3a2 2 0 0 0 -4 0"></path></svg
+            >
+          </a>
+        </li>
+        <!-- Numero -->
+        <li class="hover:text-blue-500 transicionColor">
+          <a href="tel:+56992953190" target="_blank">
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="currentColor"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+                d="M6 5a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-8a2 2 0 0 1 -2 -2v-14z"
+              ></path><path d="M11 4h2"></path><path d="M12 17v.01"></path></svg
+            >
+          </a>
+        </li>
+      </ul>
+    </nav>
   </section>
 </footer>
+
+<style>
+  .transicionColor:hover {
+    transition: all 0.5s ease;
+  }
+</style>
