Terminando el portafolio

--- a/src/components/Information.astro
+++ b/src/components/Information.astro
@@ -9,7 +9,7 @@
       >
         <img
           class="w-[100%] h-[100%] object-cover rounded-full"
-          src="/Perfil.webp"
+          src="./img/Perfil.webp"
           alt="Mi foto personal"
         />
       </div>
