--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -33,7 +33,7 @@
           <div class="w-[100%] mb-[20px] flex object-cover">
             <img
               class="mt-[20px] w-[100%] h-[100%]"
-              src="/proyectos/ingvac.webp"
+              src="./proyectos/ingvac.webp"
               alt=""
             />
           </div>
@@ -72,7 +72,7 @@
           <div class="w-[100%] mb-[20px] flex object-cover justify-center">
             <img
               class="mt-[20px] w-[50%] h-[100%] max-h-[110px]"
-              src="/proyectos/Convertidor.webp"
+              src="./proyectos/Convertidor.webp"
               alt=""
             />
           </div>
@@ -114,7 +114,7 @@
           <div class="w-[100%] mb-[20px] flex object-cover">
             <img
               class="mt-[20px] w-[100%] h-[100%]"
-              src="/proyectos/ISAFLOR.webp"
+              src="./proyectos/ISAFLOR.webp"
               alt=""
             />
           </div>
@@ -235,7 +235,7 @@
           <div class="w-[100%] mb-[20px] flex object-cover">
             <img
               class="mt-[20px] w-[100%] h-[100%]"
-              src="/proyectos/VIT.webp"
+              src="./proyectos/VIT.webp"
               alt=""
             />
           </div>
