--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,17 +2,17 @@
   <section class="w-[100%] flex flex-col md:flex-row">
     <div class="w-[100%] flex justify-center items-center md:w-[50%]">
       <div class="max-w-[150px] flex object-cover">
-        <img class="w-[100%] h-[100%]" src="/Logo-blanco.png" />
+        <img class="w-[100%] h-[100%]" src="./img/Logo-blanco.png" />
       </div>
     </div>
-    
+
     <nav class="w-[100%] md:w-[50%] flex justify-center items-center">
       <ul
         class="w-[50%] text-white flex flex-row justify-center gap-4 mt-[20px] md:mt-0"
       >
         <!-- Instagram -->
         <li class="hover:text-blue-500 transicionColor">
-          <a href="https://www.instagram.com/josevillah/">
+          <a href="https://www.instagram.com/josevillah/" target="_blank">
             <svg
               width="40"
               height="40"
@@ -31,7 +31,10 @@
         </li>
         <!-- Facebook -->
         <li class="hover:text-blue-500 transicionColor">
-          <a href="https://www.facebook.com/jose.villa.3745?locale=es_LA">
+          <a
+            href="https://www.facebook.com/jose.villa.3745?locale=es_LA"
+            target="_blank"
+          >
             <svg
               width="40"
               height="40"
@@ -68,7 +71,7 @@
         </li>
         <!-- Linkedin -->
         <li class="hover:text-blue-500 transicionColor">
-          <a href="https://www.linkedin.com/in/josevillah/">
+          <a href="https://www.linkedin.com/in/josevillah/" target="_blank">
             <svg
               width="40"
               height="40"
