--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,10 @@
-<header class="w-[100%] px-10 py-2 bg-slate-900 fixed top-0 left-0 z-10">
+<header
+  class="w-[100%] px-10 py-2 bg-slate-900 fixed top-0 left-0 z-10 shadow-2xl"
+>
   <section class="w-[100%] flex flex-row">
     <div class="w-[50%]">
       <div class="max-w-[150px] flex object-cover">
-        <img class="w-[100%] h-[100%]" src="/Logo-blanco.png" />
+        <img class="w-[100%] h-[100%]" src="./img/Logo-blanco.png" />
       </div>
     </div>
     <nav class="w-[50%]">
