Agregando la modificacion de colores en el texto de los botones

--- a/src/components/Information.astro
+++ b/src/components/Information.astro
@@ -58,7 +58,7 @@
         </div>
         <div class="w-[100%] 2xl:w-[50%] flex gap-2 flex justify-center">
           <a
-            class="bg-white hover:bg-gray-300 w-[90px] py-2 rounded flex justify-center gap-1 transicionColor"
+            class="bg-white hover:bg-gray-300 w-[90px] py-2 rounded flex justify-center gap-1 text-black transicionColor"
             href="https://github.com/josevillah"
             target="_blank"
           >
@@ -75,10 +75,10 @@
                 d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
               ></path></svg
             >
-            <span>GitHub</span>
+            <span class="text-black">GitHub</span>
           </a>
           <a
-            class="bg-white hover:bg-gray-300 w-[110px] py-2 rounded flex justify-center gap-1 transicionColor"
+            class="bg-white hover:bg-gray-300 w-[110px] py-2 rounded flex justify-center gap-1 text-black transicionColor"
             href="https://www.linkedin.com/in/josevillah/"
             target="_blank"
           >
@@ -97,7 +97,7 @@
               ></path><path d="M12 16l0 -5"></path><path
                 d="M16 16v-3a2 2 0 0 0 -4 0"></path></svg
             >
-            <span>Linkedin</span>
+            <span class="text-black">Linkedin</span>
           </a>
         </div>
       </div>
